# fastapi-react

./: .gitignore  LICENSE  README.md
backend/: main.py  models.py  pyproject.toml  schemas.py  services.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.js
frontend/src/components/: ErrorMessage.jsx  Register.jsx
frontend/src/context/: UserContext.jsx
