[tool.poetry]
name = "backend"
version = "0.1.0"
description = "I'll use fastapi."
authors = ["Sangsan <sangsan.prohmvitak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
